# gamestat

./: .gitignore  LICENSE  README.md  gamestat.py
.github/workflows/: release.yml
installer/: gamestat.iss
packaging/linux/: gamestat-tui.desktop  gamestat.desktop  install.sh  make-tarball.sh
tui/: Cargo.toml
tui/src/: main.rs
