[package]
name = "gamestat-tui"
version = "0.7.0"
edition = "2021"
description = "Terminal UI for gamestat — ranks games, shows disk usage, and uninstalls"
license = "MIT"

[[bin]]
name = "gamestat-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
